--- a/cg-dropdown.html
+++ b/cg-dropdown.html
@@ -1,9 +1,13 @@
 <link rel="import" href="../core-menu/core-menu.html">
 <link rel="import" href="../core-collapse/core-collapse.html">
+<link rel="import" href="../core-icon/core-icon.html">
 <link rel="import" href="../polymer/polymer.html">
 <polymer-element name="cg-dropdown" attributes="valueattr value">
     <template>
-        <div id="selected"></div>
+        <div id="header" layout horizontal>
+            <span flex id="selected"></span>
+            <core-icon icon="{{_arrow}}"></core-icon>
+        </div>
         <core-collapse id="collapse">
             <core-menu id="menu" on-core-select="{{_change}}">
                 <content id="content" select="*"></content>
@@ -38,6 +42,12 @@
             _selected: null,
 
             /**
+             * Return the arrow icon to use according whether the dropdown is opened or not.
+             * @private
+             */
+            _arrow: "arrow-drop-down",
+
+            /**
              * Select the element.
              * @param element
              * @method
@@ -60,6 +70,7 @@
              */
             _toggleDropdown: function () {
                 this.$.collapse.toggle();
+                this._arrow = this.$.collapse.opened ? "arrow-drop-up" : "arrow-drop-down";
             },
 
             /**
@@ -72,6 +83,7 @@
             _change: function (e, element) {
                 this._select(element.item);
                 this.$.collapse.opened = false;
+                this._arrow = "arrow-drop-down";
             },
 
             /**
