--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -58,6 +58,9 @@
             data: null,
             config: null,
 
+            _isReady: false,
+            get isReady() { return this._isReady; },
+
             handleErrors: function () {
                 this.loader.on("error", function (error) { this.fire("error", {error: error}); }.bind(this));
                 this.saver.on("error", function (error) { this.fire("error", {error: error}); }.bind(this));
@@ -113,6 +116,7 @@
                 }.bind(this));
                 this.loader.load(this.graph, this._graphData);
                 this.renderer.render();
+                this._isReady = true;
                 this.fire("ready");
             },
 
