Fixed overflow on IE

--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -8,6 +8,9 @@
 <polymer-element name="cg-renderer" attributes="graphUrl" extends="dude-config">
     <template>
         <style>
+            #svg {
+                overflow: hidden;
+            }
             #svg #selection {
                 fill: rgba(255, 255, 255, 0.2);
                 stroke: rgba(255, 255, 255, 0.5);
