--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div drawer>
             <core-menu selected="2">
                 <core-item label="Dashboard" icon="dashboard"></core-item>
-                <core-item label="Store" icon="apps"></core-item>
+                <core-item label="Shop" icon="shopping-cart"></core-item>
                 <core-item label="Editor" icon="create"></core-item>
                 <core-item label="Get the app!" icon="android"></core-item>
                 <core-item label="Contact" icon="send"></core-item>
