--- a/cg-file-button.html
+++ b/cg-file-button.html
@@ -4,8 +4,8 @@
 <polymer-element name="cg-file-button">
     <template>
         <paper-button id="button" on-click="{{_buttonClicked}}">
+            <span>None</span>
             <core-icon icon="file-upload"></core-icon>
-            <span>Upload</span>
         </paper-button>
         <input id="inputFile" type="file" accept=".ogg,.mp3,.wav" hidden>
     </template>
